refactor: 수동 발행 방법 수정